--- a/data_import/config/config.yml
+++ b/data_import/config/config.yml
@@ -5,3 +5,8 @@ jaspar:
     base_url: "https://jaspar.genereg.net"
 pfam:
     base_url: "https://pfam.xfam.org/"
+uscs:
+    base_url: 'https://api.genome.ucsc.edu/'
+#https://github.com/Ensembl/ensembl-rest/wiki/Getting-Started
+ensembl_biomart:
+    base_url: 'http://rest.ensembl.org/'
